SAFETY/isv_enclave/Debug/isv_enclave.log
Build started 5/15/2017 5:17:47 PM.
     1>Project "C:\Users\sadat\MyDrive\SAFETY Review\SafetyGWAS-master\SAFETY\isv_enclave\isv_enclave.vcxproj" on node 2 (Build target(s)).
     1>ClCompile:
         C:\Program Files (x86)\IntelSWTools\compilers_and_libraries_2017\windows\bin\intel64\icl.exe /c /Qm32 /I"C:\Program Files (x86)\Intel\IntelSGXSDK\include" /I"C:\Program Files (x86)\Intel\IntelSGXSDK\include\tlibc" /I"C:\Program Files (x86)\Intel\IntelSGXSDK\include\stlport" /I"C:\Program Files (x86)\Intel\IntelSGXSDK\include\epid" /I"C:\Program Files (x86)\Intel\IntelSGXSDK\include\ippcp" /Zi /nologo /W4 /WX /Od /D __INTEL_COMPILER=1700 /D _WINDLL /EHsc /MTd /GS /Zc:wchar_t /Zc:forScope /Fo"Debug\\" /Fd"Debug\vc120.pdb" /Gd /TP isv_enclave.cpp
         isv_enclave.cpp
         Default key derivation function is used.
       isv_enclave.cpp(498): message #3280: declaration hides variable "g" (declared at line 104)
           	BigInteger g = stringToBigInteger(gstr);
           	           ^
         
       isv_enclave.cpp(500): message #3280: declaration hides variable "lambda" (declared at line 104)
           	BigUnsigned lambda = stringToBigUnsigned(lambdastr);
           	            ^
         
       isv_enclave.cpp(539): message #3280: declaration hides variable "g" (declared at line 104)
           	BigInteger g(5);
           	           ^
         
       isv_enclave.cpp(541): message #3280: declaration hides variable "lambda" (declared at line 104)
           	BigUnsigned lambda = stringToBigUnsigned(lambdaString);
           	            ^
         
       isv_enclave.cpp(537): message #869: parameter "gstr" was never referenced
           std::string decryption(char* CT,string gstr, string lambdastr)
                                                  ^
         
       isv_enclave.cpp(537): message #869: parameter "lambdastr" was never referenced
           std::string decryption(char* CT,string gstr, string lambdastr)
                                                               ^
         
       isv_enclave.cpp(577): message #3280: declaration hides variable "g" (declared at line 104)
           	BigInteger g(5);
           	           ^
         
       isv_enclave.cpp(579): message #3280: declaration hides variable "lambda" (declared at line 104)
           	BigUnsigned lambda = stringToBigUnsigned(lambdaString);
           	            ^
         
       isv_enclave.cpp(610): message #2557: comparison between signed and unsigned operands
           	if (len > strlen(secret))
           	        ^
         
       isv_enclave.cpp(620): message #869: parameter "len_ldmatrix" was never referenced
           void ld(char** input, char* ldResult, int len_ldmatrix, int len_ldResult)
                                                     ^
         
       isv_enclave.cpp(620): message #869: parameter "len_ldResult" was never referenced
           void ld(char** input, char* ldResult, int len_ldmatrix, int len_ldResult)
                                                                       ^
         
       isv_enclave.cpp(693): message #869: parameter "len_hwematrix" was never referenced
           void hwe(char** input, char* hweResult, int len_hwematrix, int len_hweResult)
                                                       ^
         
       isv_enclave.cpp(693): message #869: parameter "len_hweResult" was never referenced
           void hwe(char** input, char* hweResult, int len_hwematrix, int len_hweResult)
                                                                          ^
         
       isv_enclave.cpp(728): message #869: parameter "len_cattmatrix" was never referenced
           void catt(char** input, char* cattResult, int len_cattmatrix, int len_cattResult)
                                                         ^
         
       isv_enclave.cpp(728): message #869: parameter "len_cattResult" was never referenced
           void catt(char** input, char* cattResult, int len_cattmatrix, int len_cattResult)
                                                                             ^
         
     1>isv_enclave.cpp(1054): error #264: floating-point value does not fit in required floating-point type
           			if (cprob == INFINITY) {
           			             ^
         
     1>isv_enclave.cpp(1120): error #264: floating-point value does not fit in required floating-point type
           				if (cprob == INFINITY) {
           				             ^
         
     1>isv_enclave.cpp(1251): error #264: floating-point value does not fit in required floating-point type
           			if (cprob == INFINITY) {
           			             ^
         
       isv_enclave.cpp(1296): message #869: parameter "len_cattmatrix" was never referenced
           void fet(char** input, char* fetResult, int len_cattmatrix, int len_fetResult)
                                                       ^
         
       isv_enclave.cpp(1296): message #869: parameter "len_fetResult" was never referenced
           void fet(char** input, char* fetResult, int len_cattmatrix, int len_fetResult)
                                                                           ^
         
       isv_enclave.cpp(1317): message #177: variable "sum" was declared but never referenced
           	int sum = case_sum + control_sum;
           	    ^
         
       isv_enclave.cpp(1320): message #177: variable "AA_sum" was declared but never referenced
           	int AA_sum = N_AA_case_d + N_AA_control_d;
           	    ^
         
       isv_enclave.cpp(1321): message #177: variable "Aa_sum" was declared but never referenced
           	int Aa_sum = N_Aa_case_d + N_Aa_control_d;
           	    ^
         
       isv_enclave.cpp(1322): message #177: variable "aa_sum" was declared but never referenced
           	int aa_sum = N_aa_case_d + N_aa_control_d;
           	    ^
         
       isv_enclave.cpp(1326): message #177: variable "denominator" was declared but never referenced
           	int denominator = factorial(5)* factorial(4)*factorial(3)*factorial(3)*factorial(3);
           	    ^
         
       isv_enclave.cpp(1327): message #177: variable "numerator" was declared but never referenced
           	int numerator = factorial(1)*factorial(2)*factorial(2)*factorial(2)*factorial(1)*factorial(1)*factorial(19);
           	    ^
         
       isv_enclave.cpp(1366): message #3280: declaration hides variable "g" (declared at line 104)
           	BigInteger g(5);
           	           ^
         
       isv_enclave.cpp(1367): message #3280: declaration hides variable "lambda" (declared at line 104)
           	BigUnsigned lambda = stringToBigUnsigned("681187336829861685983477976074309227114055423213861997326044753839039065994675872317693880166082865602230364912349325536661776647701497008450899024296700");
           	            ^
         
       isv_enclave.cpp(1364): message #869: parameter "lenth_input" was never referenced
           void hammingDistance(char** input,int* output,  int query, int limit,int lenth_input,int rows)
                                                                                    ^
         
       isv_enclave.cpp(1443): message #3280: declaration hides variable "g" (declared at line 104)
           	BigInteger g(5);
           	           ^
         
       isv_enclave.cpp(1444): message #3280: declaration hides variable "lambda" (declared at line 104)
           	BigUnsigned lambda = stringToBigUnsigned("681187336829861685983477976074309227114055423213861997326044753839039065994675872317693880166082865602230364912349325536661776647701497008450899024296700");
           	            ^
         
       isv_enclave.cpp(1441): message #869: parameter "lenth_input" was never referenced
           void euclidieanDistance(char** input,int* output,  int query, int limit,int lenth_input,int rows)
                                                                                       ^
         
         compilation aborted for isv_enclave.cpp (code 2)
     1>Done Building Project "C:\Users\sadat\MyDrive\SAFETY Review\SafetyGWAS-master\SAFETY\isv_enclave\isv_enclave.vcxproj" (Build target(s)) -- FAILED.

Build FAILED.

Time Elapsed 00:00:00.35
